<resources>
    <string name="app_name">Калькулятор</string>
    <string name="lblField2">Введите значение</string>
    <string name="lblField1">Введите значение</string>
    <string name="lblResult">Результат вычисления</string>
    <string name="lblCalc">Вычислить</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_point">.</string>
    <string name="key_division">/</string>
    <string name="key_multi">*</string>
    <string name="key_back">del</string>
    <string name="key_c">C</string>
    <string name="key_sum">+</string>
    <string name="key_minus">-</string>
    <string name="key_result">=</string>
    <string name="editResultCalc">"0 "</string>
    <string name="btnMoveToTest">Перейти в настройки</string>
    <string name="loginName">Логин</string>
    <string name="password">Пароль</string>
    <string name="material_black">Черная</string>
    <string name="material_red">Красная</string>
    <string name="material_default">Тема по умолчанию</string>
    <string name="material_blue">Синяя</string>
    <string name="not_name">Некорректные символы.</string>
    <string name="weak_password">Кривой пароль</string>
    <string name="tvSettingsCalc">Настройки темы калькулятора:</string>
    <string name="btnSave">Сохранить настройки</string>
</resources>