<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">
    <TextView
            android:text="@string/tvSettingsCalc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:height="@dimen/tvSettingsCalcHeight"
            android:textSize="@dimen/tvSettingsCalcSize"
            android:id="@+id/tvThemeCalc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"/>
    <RadioGroup
            android:id="@+id/radioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvThemeCalc">
        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMaterialBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material_black"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMaterialRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material_red"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMaterialDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material_default"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMaterialBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material_blue"/>
    </RadioGroup>
    <Button
            android:text="@string/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSaveSettings"
            app:layout_constraintTop_toBottomOf="@+id/radioButtons" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>