<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:id="@+id/key_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textSize="@dimen/key"
                    app:layout_constraintBottom_toTopOf="@+id/key_4"
                    app:layout_constraintEnd_toStartOf="@+id/key_2"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3"
                    app:layout_constraintVertical_chainStyle="packed"/>
            <Button
                    android:id="@+id/key_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textSize="@dimen/key"
                    app:layout_constraintVertical_bias="0.3"
                    app:layout_constraintBottom_toTopOf="@+id/key_5"
                    app:layout_constraintEnd_toStartOf="@+id/key_3"
                    app:layout_constraintStart_toEndOf="@+id/key_1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"/>
            <Button
                    android:id="@+id/key_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:textSize="@dimen/key"
                    app:layout_constraintVertical_bias="0.3"
                    app:layout_constraintBottom_toTopOf="@id/key_6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/key_2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"/>
            <Button
                    android:id="@+id/key_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    android:textSize="@dimen/key"
                    app:layout_constraintBottom_toTopOf="@id/key_7"
                    app:layout_constraintEnd_toStartOf="@+id/key_5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/key_1"/>
            <Button
                    android:id="@+id/key_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:textSize="@dimen/key"
                    app:layout_constraintBottom_toTopOf="@id/key_8"
                    app:layout_constraintEnd_toStartOf="@id/key_6"
                    app:layout_constraintStart_toEndOf="@id/key_4"
                    app:layout_constraintTop_toBottomOf="@id/key_2"/>
            <Button
                    android:id="@+id/key_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6"
                    android:textSize="@dimen/key"
                    app:layout_constraintBottom_toTopOf="@id/key_9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/key_5"
                    app:layout_constraintTop_toBottomOf="@id/key_3"/>
            <Button
                    android:id="@+id/key_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7"
                    android:textSize="@dimen/key"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/key_8"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/key_4"/>
            <Button
                    android:id="@+id/key_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8"
                    android:textSize="@dimen/key"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/key_9"
                    app:layout_constraintStart_toEndOf="@id/key_7"
                    app:layout_constraintTop_toBottomOf="@+id/key_5"/>
            <Button
                    android:id="@+id/key_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_9"
                    android:textSize="@dimen/key"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/key_8"
                    app:layout_constraintTop_toBottomOf="@id/key_6"/>
            <Button
                    android:id="@+id/key_0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="@dimen/key"
                    app:layout_constraintTop_toBottomOf="@+id/key_8"
                    app:layout_constraintStart_toStartOf="@+id/key_7"
                    app:layout_constraintEnd_toStartOf="@+id/key_point"/>
            <Button
                    android:id="@+id/key_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_point"
                    android:textSize="@dimen/key"
                    app:layout_constraintTop_toBottomOf="@+id/key_9"
                    app:layout_constraintStart_toEndOf="@+id/key_0"
                    app:layout_constraintEnd_toEndOf="@id/key_9"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>